# BilBiliChat

./: .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md  pull_request_template.md  release.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/branding/: APP_BRANDING.md  BANNER_DESIGN.md  LOGO_DESIGN.md  SCREENSHOT_LAYOUT.md
docs/openlive/: README.md  configuration.md  errors.md  identity-code.md  overlay.md  reconnect.md
docs/testing/: README.md  macos.md  multi-window.md  obs.md  openlive.md  overlay-long-run.md  release-signing.md  windows.md
js-demo/server/: README.md  interceptor.ts  package-lock.json  package.json  server.ts  tsconfig.json
plugins/: AutoReplyPlugin.ts  HelloPlugin.ts  TTSPlugin.ts
scripts/: generate-release-assets.mjs  tauri-runner.mjs
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: bilibili.ts
src/components/: AppFooter.vue  AppHeader.vue  ConnectionPanel.vue  DanmuItem.vue  DanmuList.vue  GiftItem.vue  LogPanel.vue  RoomConnect.vue  RoomTabs.vue  SCItem.vue  SettingsDrawer.vue  SettingsPanel.vue  StatusBar.vue  StatusPanel.vue  SystemMessage.vue  UpdateDialog.vue
src/design/: index.css  index.ts
src/export/: index.ts
src/sdk/: index.ts  (+1 more)
(+88 files in other folders)
